<resources>
    <string name="app_name">Milk@F</string>
    <string name="action_download_manager">下载管理</string>
    <string name="download">下载</string>
    <string name="about">关于</string>
    <string name="title_activity_download_manager">下载管理</string>
    <string name="start_all">全部开始</string>
    <string name="pause_all">全部暂停</string>
    <string name="clear_record">清空记录</string>
    <string name="delete_all">删除全部</string>
    <string name="action_change_span_count">更改列数</string>
    <string name="title_activity_theme">主题管理</string>
    <string name="setting_banner">侧滑导航栏BANNER</string>
    <string name="url_hint">网址、文件路径等</string>
    <string name="action_touch_to_top">返回顶部</string>
    <string name="gallery">图库</string>
    <string name="more_gallery">更多图库，敬请期待</string>
    <string name="dududu">屏蔽</string>
    <string name="tianjia">一些资源还算不错的网站，以后会抽空添加更多</string>
    <string name="pingbineirong">屏蔽不良的数据内容</string>
    <string name="banquan">版权</string>
    <string name="banquanneirong">应用所有资源均来自网络，如有侵权，请联系对应网站管理员删除，请勿违法以及商用，本人不对其负责</string>
    <string name="ganxie">感谢</string>
    <string name="ganxieneirong">向开源致敬，感谢所有无私的开源贡献者</string>
    <string name="juedebucuo">觉得还不错</string>
    <string name="geiwopingfen">给我评分</string>
    <string name="alipay">支付宝捐赠</string>
    <string name="qqpay">QQ捐赠</string>
    <string name="wechatpay">微信捐赠</string>
    <string name="dilidilijj">哔哩哔哩唧唧</string>
    <string name="hitokoto">一言</string>
    <string name="alipay_code">FKX08696X3YPOJFGWKD92E</string>
    <string name="qq_pay_code">http://r.photo.store.qq.com/psb?/a97e084f-86ae-45db-a2e4-e63a3cb987b3/6wuOxikFvnHSM6rPTGtGM3U5WQBtTwiLW99WmaLsuPQ!/r/dGsBAAAAAAAA</string>
    <string name="wechat_pay_code">http://r.photo.store.qq.com/psb?/a97e084f-86ae-45db-a2e4-e63a3cb987b3/EWJsk3GK9MggfSSVklZb9mqNNK7oGcFry4EEYuAx.HM!/r/dGkBAAAAAAAA</string>
    <string name="please_wait">少女祈祷中…</string>
    <string name="wait">…</string>
    <string name="traffic_information">已用流量</string>
    <string name="cache">图片缓存</string>
    <string name="opened">打开</string>
    <string name="span_count">图片展示列数</string>
    <string name="cancel">取消</string>
    <string name="continue_str">继续</string>
    <string name="finished">完成</string>
    <string name="reinput">重新输入</string>
    <string name="lock">解锁</string>
    <string name="pin">PIN</string>
    <string name="fingerprint">指纹</string>
    <string name="wait_inut">等待输入</string>
    <string name="yiju">一句</string>
    <string name="ad">AD</string>
    <string name="loli">Loli</string>
    <string name="today_in_history">历史上的今天</string>
    <string name="juzi">句子</string>
    <string name="go">GO</string>
    <string name="set_pin">设置 PIN</string>
    <string name="unlock">解锁</string>
    <string name="settings">设置</string>
    <string name="widget">小部件</string>
    <string name="show_finished">只显示下载完成</string>
    <string name="show_ing">只显示未完成</string>
    <string name="show_all">显示所有任务</string>
    <string name="download_count">同时下载任务数（重启后生效）</string>
    <string name="info">信息</string>
    <string name="theme">主题</string>
    <string name="download_all">下载全部</string>
    <string name="refresh_interval">刷新间隔（重新添加小部件后生效）</string>
    <string name="use_info">使用信息</string>
    <string name="display_download">展示与下载</string>
    <string name="moeimg">MOEIMG</string>
    <string name="apic">APIC</string>
    <string name="bing">BING</string>
    <string name="banner_source">背景源</string>
    <string name="gank">GANK</string>
    <string name="splash_source">Splash背景源</string>
    <string name="buy_a_coffee">\u3000\u3000嗨，最近还好吗？\n\n\u3000\u3000本应用使用还算放心吗？如果有什么使用上的问题，可以去应用市场给我反馈，这会让应用获得更好的体验\n\n\u3000\u3000本应用花费了作者大量的时间和精力，如果可以的话，在此恳请您给应用一个好评，如果经济宽裕的话，也可以给我捐助，您的每一分捐助都会让作者获得更多的信心去做好这个应用，在此感谢您\n\n\u3000\u3000本应用完全免费，应用中所有资源均来自网络，如果可以的话，请前往对应网站点击广告来支持站长，让网站可以继续运营下去，再次感谢您的支持</string>
    <string name="image_info">图片信息</string>
    <string name="wallhaven">WALLHAVEN</string>
    <string name="widget_banner_source_setting_long">小部件背景源设置</string>
    <string name="widget_banner_source_setting_short">小部件源</string>
    <string name="splash_background_source_setting_long">Splash背景源设置</string>
    <string name="splash_background_source_setting_short">Splash源</string>
    <string name="simple_desktops">SIMPLEDESKTOPS</string>
    <string name="wallpaper_is_blur">壁纸是否模糊</string>
    <string name="widget_is_blur">小部件模糊背景是否启用</string>
    <string name="is_set_wallpaper">是否同时设置壁纸</string>
    <string name="blur_value">模糊度</string>
    <string name="blur_value_setting">图片模糊度设置</string>
    <string name="save_pic_to_local">是否保存图片到本地</string>
    <string name="yuriimg">YURIIMG</string>
    <string name="about_setting">相关设置</string>
    <string name="is_wifi_load">仅WiFi下刷新图片</string>
    <string name="banner">http://r.photo.store.qq.com/psb?/a97e084f-86ae-45db-a2e4-e63a3cb987b3/u5FVmAbBltiKs9u*jmt5R*Qj9kIzigECBi48EIbrNvI!/r/dD4BAAAAAAAA</string>
    <string name="pause_refresh">暂停刷新部件</string>
    <string name="kuvva">KUVVA</string>
    <string name="is_update_media">更新图片到媒体库（重启后生效）</string>
    <string name="scan_setting">扫描</string>
    <string name="you_are_good">其实你已经很努力了\nｸﾞｯ!(๑•̀ㅂ•́)و✧</string>
    <string name="gamersky">GAMERSKY</string>
    <string name="pic">图片源</string>
</resources>
