<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/v48dp"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/board_background"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/v8dp"
            android:paddingStart="@dimen/v8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/v8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@animator/touch_floating"
                app:cardBackgroundColor="?attr/card_background"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/v8dp">

                    <ImageView
                        android:layout_width="@dimen/v32dp"
                        android:layout_height="@dimen/v32dp"
                        android:src="@drawable/ic_setting_theme"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="@dimen/v2dp"
                        android:layout_height="@dimen/v8dp"
                        android:layout_marginEnd="@dimen/v8dp"
                        android:layout_marginLeft="@dimen/v8dp"
                        android:layout_marginRight="@dimen/v8dp"
                        android:layout_marginStart="@dimen/v8dp"
                        android:background="?@android:attr/colorAccent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/theme"
                        android:textColor="?@android:attr/colorAccent"
                        android:textSize="@dimen/v18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/v8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@animator/touch_floating"
                app:cardBackgroundColor="?attr/card_background"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/v8dp">

                    <ImageView
                        android:layout_width="@dimen/v32dp"
                        android:layout_height="@dimen/v32dp"
                        android:src="@drawable/ic_setting_widget"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="@dimen/v2dp"
                        android:layout_height="@dimen/v8dp"
                        android:layout_marginEnd="@dimen/v8dp"
                        android:layout_marginLeft="@dimen/v8dp"
                        android:layout_marginRight="@dimen/v8dp"
                        android:layout_marginStart="@dimen/v8dp"
                        android:background="?@android:attr/colorAccent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/widget"
                        android:textColor="?@android:attr/colorAccent"
                        android:textSize="@dimen/v18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_use_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/v8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@animator/touch_floating"
                app:cardBackgroundColor="?attr/card_background"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/v8dp">

                    <ImageView
                        android:layout_width="@dimen/v32dp"
                        android:layout_height="@dimen/v32dp"
                        android:src="@drawable/ic_setting_use_info"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="@dimen/v2dp"
                        android:layout_height="@dimen/v8dp"
                        android:layout_marginEnd="@dimen/v8dp"
                        android:layout_marginLeft="@dimen/v8dp"
                        android:layout_marginRight="@dimen/v8dp"
                        android:layout_marginStart="@dimen/v8dp"
                        android:background="?@android:attr/colorAccent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/use_info"
                        android:textColor="?@android:attr/colorAccent"
                        android:textSize="@dimen/v18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_display_download"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/v8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@animator/touch_floating"
                app:cardBackgroundColor="?attr/card_background"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/v8dp">

                    <ImageView
                        android:layout_width="@dimen/v32dp"
                        android:layout_height="@dimen/v32dp"
                        android:src="@drawable/ic_setting_display_download"
                        tools:ignore="ContentDescription" />

                    <View
                        android:layout_width="@dimen/v2dp"
                        android:layout_height="@dimen/v8dp"
                        android:layout_marginEnd="@dimen/v8dp"
                        android:layout_marginLeft="@dimen/v8dp"
                        android:layout_marginRight="@dimen/v8dp"
                        android:layout_marginStart="@dimen/v8dp"
                        android:background="?@android:attr/colorAccent" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/display_download"
                        android:textColor="?@android:attr/colorAccent"
                        android:textSize="@dimen/v18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/v128dp"
                android:layout_marginTop="@dimen/v8dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:stateListAnimator="@animator/touch_floating"
                app:cardBackgroundColor="?attr/card_background"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/v8dp"
                        android:text="@string/lock" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/v2dp"
                        android:layout_gravity="center"
                        android:background="?@android:attr/colorAccent" />

                    <LinearLayout
                        android:id="@+id/linear_layout_pin_lock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:padding="@dimen/v8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/pin"
                            android:textSize="@dimen/v12sp" />

                        <ImageView
                            android:id="@+id/image_view_pin"
                            android:layout_width="@dimen/v24dp"
                            android:layout_height="@dimen/v24dp"
                            android:layout_gravity="end"
                            app:srcCompat="@drawable/ic_fiber_pin_white_24dp"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center"
                        android:background="?@android:attr/colorAccent" />

                    <LinearLayout
                        android:id="@+id/linear_layout_fingerprint_lock"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:padding="@dimen/v8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/fingerprint"
                            android:textSize="@dimen/v12sp" />

                        <ImageView
                            android:id="@+id/image_view_fingerprint"
                            android:layout_width="@dimen/v24dp"
                            android:layout_height="@dimen/v24dp"
                            android:layout_gravity="end"
                            app:srcCompat="@drawable/ic_fingerprint_white_24dp"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
